--- a/detail/detail.html
+++ b/detail/detail.html
@@ -8,21 +8,250 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" href="https://shopeeplus.com//upload/images/4321Shopee-logo-512x512.png">
+    <link rel="stylesheet" href="../user/css/reset.css">
+    <link rel="stylesheet" href="../user/css/style.css">
 </head>
 
 <body>
-    <div id="content-detail"></div>
+    <header>
+        <div class="container">
+            <div class="wrapper-1 d-flex justify-content-between">
+                <ul class="menu d-flex" id="menu">
+                    <div id="bars" onclick="hidden1()">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+
+                    <li>
+                        <a href="#">Kênh người bán</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">Trở thành người bán Shoppe</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">Tải ứng dụng</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">Kết nối</a>
+                        <a href="">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="nav d-flex">
+                    <li>
+                        <a href="#">
+                            <i class="fa-regular fa-bell"></i>
+                            Thông báo
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-regular fa-circle-question"></i>
+                            Hỗ trợ
+                        </a>
+                    </li>
+                    <li>
+                        <a href="register.html">Đăng ký</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="login.html">Đăng nhập</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="wrapper-2 d-flex align-items-center">
+                <div class="logo" id="logo">
+                    <a href="#">
+                        <img src="../user/img/270213300_352607336253543_2173618840149640549_n.png" alt="logo shoppe">
+                    </a>
+                </div>
+                <div class="search">
+                    <input id="search-name" type="text" placeholder="Tìm sản phẩm">
+                    <button onclick="searchByNameProduct()" id="search-btn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
+                <div class="cart" id="cart">
+                    <a href="#">
+                        <i class="fa-solid fa-cart-shopping fa-2x"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div id="content-detail" style="margin-top: 146px;"></div>
+    <input type="hidden" id="userId">
+
+    <!-- Hiện thông báo thêm vào giỏ hàng thành công -->
+    <!-- <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button> -->
+
+
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <!-- <img src="..." class="rounded me-2" alt="..."> -->
+                <strong class="me-auto">Bootstrap</strong>
+                <small>1 giây trước</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="wrapper">
+                <div class="row justify-content-between">
+                    <div class="col-2">
+                        <ul>
+                            <li>
+                                Chăm sóc khách hàng
+                            </li>
+                            <li>
+                                <a href="#">Trung tâm trợ giúp</a>
+                            </li>
+                            <li>
+                                <a href="#">Shopee Mall</a>
+                            </li>
+                            <li>
+                                <a href="#">Hướng dẫn mua hàng</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <ul>
+                            <li>
+                                Giới thiệu
+                            </li>
+                            <li>
+                                <a href="#">Giới thiệu</a>
+                            </li>
+                            <li>
+                                <a href="#">Tuyển dụng</a>
+                            </li>
+                            <li>
+                                <a href="#">Điều khoản</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <ul>
+                            <li>
+                                Theo dõi
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-facebook"></i>
+                                <a href="#">
+                                    Facebook
+                                </a>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-instagram"></i>
+                                <a href="#">
+                                    Instagram
+                                </a>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-linkedin"></i>
+                                <a href="#">
+                                    Linkedin
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-2" id="category-footer">
+                        <ul>
+                            <li>
+                                Danh mục
+                            </li>
+                            <li>
+                                <a href="#">Mũ bảo hiểm</a>
+                            </li>
+                            <li>
+                                <a href="#">Phụ kiện</a>
+                            </li>
+                            <li>
+                                <a href="#">Đồ bảo hộ</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul>
+                            <li>
+                                Vào cửa hàng trên ứng dụng
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-google-play"></i>
+                                <a href="#">Google play</a>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-app-store-ios"></i>
+                                <a href="#">App store</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p style="text-align: center;">
+                        © 2015 - Bản quyền thuộc về Công ty TNHH Shopee
+                    </p>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
     <script src="../detail/detail.js"></script>
     <script>
-        $(document).ready(function () {
-            let id = 13;
-            display(id);
+        let isAddSuccess = true;
+        $(document).ready(async function () {
+            $('#cart').on('click', function () {
+                window.location.href = "http://127.0.0.1:5500/cart/cart.html";
+            })
 
-        })
+
+            let param = window.location.href.split("?");
+            let productId = param[1];
+            display(productId);
+
+
+
+            // toast
+            // const toastTrigger = document.getElementById('liveToastBtn')
+            // const toastLiveExample = document.getElementById('liveToast')
+
+            // if (toastTrigger) {
+            //     const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastLiveExample)
+            //     toastTrigger.addEventListener('click', () => {
+            //         toastBootstrap.show()
+            //     })
+            // }
+
+            $('#content-detail').on('click', '#liveToastBtn', function () {
+                // Hiển thị toast ở đây
+                const toastLiveExample = document.getElementById('liveToast');
+                const toastBootstrap = new bootstrap.Toast(toastLiveExample);
+                toastBootstrap.show();
+            });
+
+        });
     </script>
 </body>
 
