--- a/order_history/history.html
+++ b/order_history/history.html
@@ -7,31 +7,247 @@
     <title>Lịch sử mua hàng</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" href="https://shopeeplus.com//upload/images/4321Shopee-logo-512x512.png">
+    <link rel="stylesheet" href="../user/css/reset.css">
+    <link rel="stylesheet" href="../user/css/style.css">
 </head>
 
 <body>
-    <div class="container-fluid mt-5">
+    <header>
+        <div class="container">
+            <div class="wrapper-1 d-flex justify-content-between">
+                <ul class="menu d-flex" id="menu">
+                    <div id="bars" onclick="hidden1()">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+
+                    <li>
+                        <a href="#">Kênh người bán</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">Trở thành người bán Shoppe</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">Tải ứng dụng</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="#">Kết nối</a>
+                        <a href="">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="nav d-flex">
+                    <li>
+                        <a href="#">
+                            <i class="fa-regular fa-bell"></i>
+                            Thông báo
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-regular fa-circle-question"></i>
+                            Hỗ trợ
+                        </a>
+                    </li>
+                    <li>
+                        <a href="register.html">Đăng ký</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <a href="login.html">Đăng nhập</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="wrapper-2 d-flex align-items-center">
+                <div class="logo" id="logo">
+                    <a href="#">
+                        <img src="../user/img/270213300_352607336253543_2173618840149640549_n.png" alt="logo shoppe">
+                    </a>
+                </div>
+                <div class="search">
+                    <input id="search-name" type="text" placeholder="Tìm sản phẩm">
+                    <button onclick="searchByNameProduct()" id="search-btn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
+                <div class="cart" id="cart">
+                    <a href="#">
+                        <i class="fa-solid fa-cart-shopping fa-2x"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="container" style="margin-top: 146px; margin-bottom: 60px;">
         <h1 class="text-center">Lịch sử mua hàng</h1>
         <div class="row mt-5 bg-light">
             <div class="col-md-2 fw-bold d-flex">
                 <p class="mx-2">Ngày đặt hàng</p>
             </div>
-            <div class="col-md-2 fw-bold d-flex">
-                <p class="mx-2">Sản phẩm</p>
+            <div class="col-md-3 fw-bold d-flex">
+                Tên khách hàng
             </div>
             <div class="col-md-2 fw-bold d-flex">
-                <p class="mx-2">Đơn giá</p>
+                Số điện thoại
             </div>
-            <div class="col-md-2 fw-bold d-flex">
-                <p class="mx-2">Số lượng</p>
-            </div>
-            <div class="col-md-2 fw-bold d-flex">
-                <p class="mx-2">Thành tiền</p>
+            <div class="col-md-3 fw-bold d-flex">
+                Địa chỉ giao hàng
             </div>
             <div class="col-md-2 fw-bold d-flex">
                 <p class="mx-2">Thao tác</p>
             </div>
-            <div id="content-history"></div>
+        </div>
+        <div id="content-history"></div>
+
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="wrapper">
+                <div class="row justify-content-between">
+                    <div class="col-2">
+                        <ul>
+                            <li>
+                                Chăm sóc khách hàng
+                            </li>
+                            <li>
+                                <a href="#">Trung tâm trợ giúp</a>
+                            </li>
+                            <li>
+                                <a href="#">Shopee Mall</a>
+                            </li>
+                            <li>
+                                <a href="#">Hướng dẫn mua hàng</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <ul>
+                            <li>
+                                Giới thiệu
+                            </li>
+                            <li>
+                                <a href="#">Giới thiệu</a>
+                            </li>
+                            <li>
+                                <a href="#">Tuyển dụng</a>
+                            </li>
+                            <li>
+                                <a href="#">Điều khoản</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <ul>
+                            <li>
+                                Theo dõi
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-facebook"></i>
+                                <a href="#">
+                                    Facebook
+                                </a>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-instagram"></i>
+                                <a href="#">
+                                    Instagram
+                                </a>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-linkedin"></i>
+                                <a href="#">
+                                    Linkedin
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-2" id="category-footer">
+                        <ul>
+                            <li>
+                                Danh mục
+                            </li>
+                            <li>
+                                <a href="#">Mũ bảo hiểm</a>
+                            </li>
+                            <li>
+                                <a href="#">Phụ kiện</a>
+                            </li>
+                            <li>
+                                <a href="#">Đồ bảo hộ</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul>
+                            <li>
+                                Vào cửa hàng trên ứng dụng
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-google-play"></i>
+                                <a href="#">Google play</a>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-app-store-ios"></i>
+                                <a href="#">App store</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p style="text-align: center;">
+                        © 2015 - Bản quyền thuộc về Công ty TNHH Shopee
+                    </p>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </footer>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Chi tiết hóa đơn</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-3 fw-bold d-flex">
+                            <p class="mx-2">Hình ảnh</p>
+                        </div>
+                        <div class="col-md-3 fw-bold d-flex">
+                            Thông tin sản phẩm
+                        </div>
+                        <div class="col-md-3 fw-bold d-flex">
+                            Đơn giá
+                        </div>
+                        <div class="col-md-3 fw-bold d-flex">
+                            Số lượng
+                        </div>
+                    </div>
+                    <div id="modal-body"></div>
+                </div>
+                <div class="modal-footer">
+                    <p class="fw-bold">Tổng giá tiền:</p>
+                    <p id="total-price"></p>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -40,9 +256,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="history.js"></script>
     <script>
-        $(document).ready(function() {
-            let userId = 1;
+        $(document).ready(async function () {
+            $('#logo').on('click', function () {
+                window.location.href = "http://127.0.0.1:5500/user/html/index.html";
+            });
+
+            $('#btn-history').on('click', function () {
+                window.location.href = "http://127.0.0.1:5500/order_history/history.html";
+            });
+            let userId = await getUserId();
             display(userId);
+            
         })
     </script>
 </body>
