--- a/user/html/index.html
+++ b/user/html/index.html
@@ -77,7 +77,7 @@
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </div>
-                <div class="cart">
+                <div class="cart" id="cart">
                     <a href="#">
                         <i class="fa-solid fa-cart-shopping fa-2x"></i>
                     </a>
@@ -241,4 +241,12 @@
 <script src="../category/category.js"></script>
 <script src="../products/list.js"></script>
 <script src="../pagination/pagination.js"></script>
+<script src="../../detail/detail.js"></script>
+<script>
+    $(document).ready(function() {
+        $('#cart').on('click',function() {
+            window.location.href = "http://127.0.0.1:5500/cart/cart.html";
+        });
+    })
+</script>
 </html>
